# hai-sh

./: .gitignore  CLAUDE.md  CONFIGURATION.md  E2B_TEST_SUMMARY.md  IMPLEMENTATION_PLAN.md  INSTALL.md  PRD.md  README.md  ROADMAP.md  SIMPLE_TEST.md  USAGE.md  competitors.md  pyproject.toml
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: glm-review.yml
ISSUES/: v0.2_GITHUB_ISSUES.md  v0.2_GITHUB_ISSUES_SUMMARY.md
docs/: ENVIRONMENT.md  SECURITY_FIXES_2025-12-20.md
docs/code-review/: 2025-12-20-hai-sh-security-review.md
hai_sh/: __init__.py  __main__.py  app_mode.py  config.py  context.py  executor.py  formatter.py  gum.py  install_shell.py  memory.py  output.py  prompt.py  provider_manager.py  rate_limit.py  schema.py  theme.py  tui.py
hai_sh/integrations/: README.md  bash_integration.sh  zsh_integration.sh
hai_sh/providers/: __init__.py  base.py  openai.py
tests/: TESTING.md  __init__.py  conftest.py  utils.py
tests/integration/: __init__.py  test_bash_integration.sh  test_cross_provider.py  test_integration_anthropic.py  test_integration_ollama.py  test_integration_openai.py  test_question_mode_real.py  test_realistic_use_cases.py  test_zsh_integration.sh
tests/unit/: __init__.py  test_anthropic_provider.py  test_app_mode.py  test_color_detection.py  test_config.py  test_conftest_helpers.py  test_context.py  test_empty_response.py  test_enhanced_git.py  test_execution_config.py  test_executor.py  test_executor_environment.py  test_formatter.py  test_formatter_rich.py  test_gum.py  test_import.py  test_init.py  test_input_detector.py  test_main.py  test_main_helpers.py  test_main_mode_detection.py  test_memory.py  test_ollama_provider.py  test_openai_provider.py  test_output.py  test_prompt.py  test_provider_manager.py  test_providers.py  test_schema.py  test_shell_history.py  test_smart_context.py  test_theme.py  test_tui.py  test_tui_schema.py
