# pyproject.toml
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hai-sh"
version = "0.0.1"
description = "AI-powered terminal assistant that suggests or executes bash commands from natural language."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "AGPL-3.0-or-later"}
authors = [{name = "Frank Bria"}]
keywords = ["cli", "ai", "terminal", "assistant", "llm", "bash", "shell"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Shells",
    "Topic :: Utilities",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "build>=1.3.0",
    "twine>=6.2.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
]

[project.scripts]
hai-sh = "hai_sh.__main__:main"

[project.urls]
Repository = "https://github.com/frankbria/hai-sh"
Issues = "https://github.com/frankbria/hai-sh/issues"
Documentation = "https://github.com/frankbria/hai-sh#readme"

[tool.setuptools]
packages = ["hai_sh"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=hai_sh --cov-report=term-missing"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
